# dumb-task-scheduler

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dumpElf.sh  linker.ld  readElf.sh  start_debug_server.sh
inc/: def.h  scheduler.h  task.h
src/: CMakeLists.txt  hw.c  linker.ld  main.c  scheduler.c  startup.c
src/hardware/startup/: startup-cortex-m3.c
src/inc/: def.h  scheduler.h  task.h
src/inc/hardware/cortex-m3/: context.h  def.h
src/inc/types/: spinlock.h  syscall.h  task-priority-queue.h  task-queue.h
src/src/: CMakeLists.txt  main.c  scheduler.c  tasks.c
src/src/hardware/: CMakeLists.txt
src/src/hardware/cortex-m3/: CMakeLists.txt  scheduler.s  startup.c  startup.s  syscall.c  syscall.s  systick.c
src/src/hardware/cortex-m3/types/: spinlock.s
src/src/hardware/startup/: startup-cortex-m3.c
src/src/scheduling/: CMakeLists.txt  first-come-first-served.c  fpps.c  template.c.template
src/src/types/: CMakeLists.txt  spinlock.c  task-queue.c
tests/: CMakeLists.txt  tests
tests/src/: task-queue.test.c
